Nft Collection bug fixes (#543)
* update mint button and remove date

* create nft refactor

* url and more fixes

* fix build

* typo fix

* fix server build

---------
