# packages/server/src/interfaces/nft.collection.interface.ts
@@ -7,10 +7,10 @@ export enum NftCollectionType {
 export interface INftCollection {
   _id?: Types.ObjectId;
   name: string;
-  description: string;
-  thumbnail: string;
-  type: NftCollectionType;
-  organizationId: Types.ObjectId | string;
+  description?: string;
+  thumbnail?: string;
+  type?: NftCollectionType;
+  organizationId?: Types.ObjectId | string;
   videos?: {
     index?: number;
     type: string;
