# packages/server/src/swagger/swagger.json
@@ -1655,6 +1655,9 @@
 								"type": "array"
 							}
 						]
+					},
+					"active": {
+						"type": "boolean"
 					}
 				},
 				"required": [
@@ -1992,11 +1995,7 @@
 					}
 				},
 				"required": [
-					"name",
-					"description",
-					"thumbnail",
-					"type",
-					"organizationId"
+					"name"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -2050,6 +2049,9 @@
 					"videos": {
 						"items": {
 							"properties": {
+								"ipfsURI": {
+									"type": "string"
+								},
 								"stageId": {
 									"type": "string"
 								},
@@ -2058,10 +2060,16 @@
 								},
 								"type": {
 									"type": "string"
+								},
+								"index": {
+									"type": "number",
+									"format": "double"
 								}
 							},
 							"required": [
-								"type"
+								"ipfsURI",
+								"type",
+								"index"
 							],
 							"type": "object"
 						},
@@ -2081,6 +2089,38 @@
 					"type",
 					"organizationId",
 					"videos"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IStandardResponse__ipfsPath-string--videos-Array_any___": {
+				"properties": {
+					"status": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"properties": {
+							"videos": {
+								"items": {},
+								"type": "array"
+							},
+							"ipfsPath": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"videos",
+							"ipfsPath"
+						],
+						"type": "object"
+					}
+				},
+				"required": [
+					"status",
+					"message"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -2144,13 +2184,7 @@
 					}
 				},
 				"required": [
-					"name",
-					"description",
-					"thumbnail",
-					"contractAddress",
-					"ipfsPath",
-					"type",
-					"organizationId"
+					"name"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -4307,6 +4341,38 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/collections/metadata/generate": {
+			"post": {
+				"operationId": "GenerateNftMetadata",
+				"responses": {
+					"201": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IStandardResponse__ipfsPath-string--videos-Array_any___"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Collections"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateNftCollectionDto"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/collections/{collectionId}": {
